<resources>
    <string name="app_name">Cos Track</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_cover_image">This is a cover image</string>
    <string name="content_description_reference_images">This is a reference image</string>
    <string name="title_activity_new_cosplay">New Cosplay</string>
    <string name="inputCosplayNameHint">Cosplay Name</string>
    <string name="inputCosplaySeriesHint">Series Name</string>
    <string name="inputCosplayStartDateHint">Start Date</string>
    <string name="inputCosplayDueDateHint">Due Date</string>
    <string name="inputCosplayBudgetHint">Budget</string>
    <string name="buttonUploadCosplayImage">Upload Cover Photo</string>
    <string name="title_activity_edit_cosplay">Edit Cosplay</string>
    <string name="title_activity_new_component">New Component</string>
    <string name="title_activity_edit_component">Edit Component</string>
    <string name="title_components">Components</string>
    <string name="title_tools">Tools</string>
    <string name="title_stats">Stats</string>
    <string name="title_references">References</string>
    <string name="inputComponentNameHint">Component Name</string>
    <string name="inputComponentAmountSpent">Amount Spent</string>
    <string name="inputComponentComponentType">Component Type</string>
    <string name="inputComponentFoundItem">Found Item</string>
    <string name="inputComponentBoughtItem">Bought Item</string>
    <string name="inputComponentMadeItem">Made Item</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="advertisement">Advertisement</string>
    <string name="cosplay_name">Cosplay Name:</string>
    <string name="number_of_components">Number of Components:</string>
    <string name="money_spent">Money Spent</string>
    <string name="time_spent">Total Time Spent</string>
    <string name="start_date">Start Date</string>
    <string name="due_date">Due Date</string>
    <string name="cosplay_summary">Cosplay Summary</string>
    <string name="misc_timer">Miscellaneous Timer</string>
    <string name="misc_time_spent">Misc. Time Spent</string>
    <string name="update_cosplay_info">Update Cosplay Info</string>
    <string name="BlankTimer">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="component_summary">Component Summary</string>
    <string name="component_name">Component Name</string>
    <string name="timer">Timer</string>
    <string name="update_component_info">Update Component Info</string>
    <string name="component_timer">Component Timer</string>
    <string name="cosplay_timer">Cosplay Timer</string>
    <string name="history">History</string>
    <string name="component_type">Component Type</string>
    <string name="title_activity_cosplay_reference_viewer">Photo References</string>
    <string name="action_delete">Delete</string>
    <string name="change_cosplay_name">Change Cosplay Name</string>
    <string name="change_cover_image">Change Cover Image</string>
    <string name="change_due_date">Change Due Date</string>
    <string name="delete_component">Delete Component</string>
    <string name="delete_cosplay">Delete Cosplay</string>
    <string name="change_component_name">Change Component Name</string>
    <string name="delete_reference_image">Delete Reference Image</string>
    <string name="change_amount_spent">Change Amount Spent</string>

</resources>
